--- a/index.html
+++ b/index.html
@@ -1,42 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta http-equiv="refresh" content="3">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+
+
+
   <title>Frontend Mentor | Intro component with sign up form</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+    body { background-color: hsl(0, 100%, 74%);
+      background-image: url("images/bg-intro-desktop.png") }
+
+      .parent {
+display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: 1fr;
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+}
+
+.div1 { grid-area: 1 / 1 / 2 / 2; position: relative; }
+.div2 { grid-area: 1 / 2 / 2 / 3; margin-top: 120px; }
+.headertext {font-size: 50px; font-family:'Poppins'; color: white; font-weight: bold; padding-left: 150px}
+.ptext {font-size: 15px; font-family:'Poppins'; color: white; padding-left: 150px}
+
+.label {background-color: hsl(248, 32%, 49%); color: white; font-family:'Poppins'; text-align:center; padding: 20px 0; border-radius: 15px; width: 85%;  -webkit-box-shadow: 0px 10px #000000;
+   -moz-box-shadow: 0px 8px rgba(0, 0, 0, 0.15);
+        box-shadow: 0px 8px rgba(0, 0, 0, 0.15);}
+.form-background {background-color: white; text-align: center; padding: 20px 0; border-radius: 15px; width: 85%; margin-top: 25px}
+.form-input {width: 90%; border-radius: 5px; height: 50px; margin-bottom: 20px; border: 1px solid hsl(246, 25%, 77%); font-family:'Poppins'; padding-left: 25px; font-size: 15px; box-sizing: border-box;}
+.form-input:focus {outline: none !important;
+    border:1px solid black;}
+.form-button {background-color: hsl(154, 59%, 51%); color: white; font-family:'Poppins'; width: 90%; border:none; border-radius: 10px; height: 50px; font-size: 16px}
+.terms-text{color: grey; font-family:'Poppins';}
+.link {color:red; text-decoration: none;}
+.container {position:absolute; top:50%; height:10em; margin-top:-5em}
   </style>
 </head>
+
 <body>
+  <div class="parent">
 
-  Learn to code by watching others
+  <div class="div1">
+    <div class="container">
+    <h1 class="headertext">Learn to code by watching others</h1>
+    <p class="ptext">See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+    </div>
+  </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+  <div class="div2">
+    <div class="label">Try it free 7 days then $20/mo. thereafter</div>
+    <div class="form-background">
+    <form>
+      <input class="form-input" placeholder="First Name"></input>
+      <input class="form-input" placeholder="Last Name"></input>
+      <input class="form-input" placeholder="Email Address"></input>
+      <input class="form-input" placeholder="Password" type="password"></input>
+    </form>
+    <button class="form-button">CLAIM YOUR FREE TRIAL</button>
+    <p class="terms-text">By clicking the button you agree to our <a class="link" href="google.com">Terms and Services</a></p>
+  </div>
+    </div>
 
-  Try it free 7 days then $20/mo. thereafter
+  </div>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
   <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+   <!-- <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
-    </p>
+    </p>-->
   </footer>
 </body>
 </html>
